samples/errors/call_non_function.lox
// Calling a non-function value
var x = 1;
x(); // expect runtime error: Can only call functions and classes.
